added text of page 2

--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title> Title </title>
+    <h2>
+        Page 1
+    </h2>
+    <body> Text tecM </body>
 
 
 </head>
